--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -26,6 +26,15 @@
   display: block;
 }
 
+.main-header__logo:hover,
+.main-header__logo:focus {
+  opacity: 0.8;
+}
+
+.main-header__logo:active {
+  opacity: 0.6;
+}
+
 .main-header__logo--picture {
   padding: 13px 0;
 }
