--- a/source/styles/blocks/catalog-additionally.scss
+++ b/source/styles/blocks/catalog-additionally.scss
@@ -176,6 +176,7 @@
 }
 
 .catalog-additionally__button {
+  @include button-primary($secondary-font, #ffffff, #68B738);
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -183,6 +184,16 @@
   display: block;
   padding: 10px 0;
   text-align: center;
+}
+
+.catalog-additionally__button:hover,
+.catalog-additionally__button:focus {
+  background-color: #5eaa2f;
+}
+
+.catalog-additionally__button:active {
+  background-color: #5eaa2f;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 @media screen and (min-width: 768px) {
@@ -196,10 +207,6 @@
     width: 244px;
     margin-left: 40px;
   }
-}
-
-.button-primary {
-  @include button-primary($secondary-font, #ffffff, #68B738);
 }
 
 .catalog-additionally__gift {
