--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -12,6 +12,7 @@
 @import "./blocks/advantages.scss";
 @import "./blocks/example.scss";
 @import "./blocks/contacts.scss";
+@import "./blocks/map.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/catalog-additionally.scss";
