Добавляет правки для защиты

--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -2,6 +2,12 @@
   position: relative;
 }
 
+@media screen and (min-width: 1440px) {
+  .contacts {
+    padding: 95px 0 106px 110px;
+  }
+}
+
 .contacts__wrapper {
   width: 100%;
   padding: 26px 20px;
@@ -21,11 +27,7 @@
   .contacts__wrapper {
     width: 565px;
     padding: 60px 80px;
-    position: absolute;
-    top: 95px;
-    left: 110px;
     background-color: #ffffff;
-    z-index: 3;
   }
 }
 
