--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,15 +1,44 @@
 .main-header__wrapper {
   width: 100%;
   min-height: 65px;
-  display: flex;
   justify-content: space-between;
   box-sizing: border-box;
   padding: 0 20px;
   position: relative;
+  display: none;
+}
+
+.main-header__wrapper--no-js {
+  width: 100%;
+  min-height: 65px;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-header__logo {
+  display: flex;
+  gap: 56px;
+}
+
+@media screen and (min-width: 768px) {
+  .main-header__logo {
+    gap: 13px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-header__logo {
+    gap: 14px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .main-header__wrapper {
+    flex-direction: row;
     justify-content: flex-start;
     padding: 25px 30px 0;
     border: none;
@@ -22,43 +51,41 @@
   }
 }
 
-.main-header__logo {
+.main-header__logo-link {
   display: block;
 }
 
-.main-header__logo:hover,
-.main-header__logo:focus {
+.main-header__logo-link:hover,
+.main-header__logo-link:focus {
   opacity: 0.8;
 }
 
-.main-header__logo:active {
+.main-header__logo-link:active {
   opacity: 0.6;
 }
 
-.main-header__logo--picture {
+.main-header__logo-picture {
   padding: 13px 0;
 }
 
 @media screen and (min-width: 768px) {
-  .main-header__logo--picture {
+  .main-header__logo-picture {
     padding: 0;
   }
 }
 
-.main-header__logo--text {
+.main-header__logo-text {
   padding: 23px 0;
 }
 
 @media screen and (min-width: 768px) {
-  .main-header__logo--text {
+  .main-header__logo-text {
     padding: 16px 0;
-    margin-left: 13px;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .main-header__logo--text {
+  .main-header__logo-text {
     padding: 19px 0;
-    margin-left: 14px;
   }
 }
