--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -21,17 +21,23 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    display: flex;
-    position: absolute;
-    top: 65px;
-    left: 0;
-    z-index: 2;
   }
 }
 
 @media (width <= 767px) {
   .main-nav__list--close {
     display: none;
+  }
+}
+
+@media (width <= 767px) {
+  .main-nav__list--open {
+    display: block;
+    position: absolute;
+    top: 64px;
+    left: 0;
+    z-index: 2;
+    width: 100%;
   }
 }
 
@@ -134,6 +140,11 @@
 }
 
 .main-nav__toggle {
+  display: none;
+  transition: 0.1s;
+}
+
+.main-nav__toggle--open {
   background-color: #ffffff;
   background-image: url("../../icons/stack.svg#burger-menu");
   background-size: 24px 24px;
@@ -142,18 +153,27 @@
   height: 24px;
   border: none;
   display: block;
-  margin: 20px 0;
-}
-
-@media screen and (min-width: 768px) {
-  .main-nav__toggle {
-    display: none;
-  }
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
 .main-nav__toggle--close {
   background-color: #ffffff;
   background-image: url("../../icons/stack.svg#close");
   background-size: 18px 18px;
+  width: 18px;
+  height: 18px;
   background-repeat: no-repeat;
+  border: none;
+  display: block;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav__toggle {
+    display: none;
+  }
 }
